# NLP_Generated_Texts

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
nlp_generated_texts/: flask_app.py  model.py
notebooks/: NLP.ipynb  NLP_For_Kaggle.ipynb
